charts/ingress/ingress.yml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: kuard-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: www.kuard.com
#      http:
#        paths:
#          - path: /app(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: kuard
#                port:
#                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
